# upside-my-app-01

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
